--- a/src/stylesheet/page.css
+++ b/src/stylesheet/page.css
@@ -7,6 +7,7 @@ html {
     height: 100%;
     font-family: Open Sans;
     box-sizing: border-box;
+    font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
 }
 
 body {
